Пофиксил 19 ошибок POSTMAN